--- a/src/python-backend/Attendance/pyproject.toml
+++ b/src/python-backend/Attendance/pyproject.toml
@@ -5,6 +5,8 @@ description = "FEM's Attendance microservice"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.21.0",
+    "dotenv>=0.9.9",
     "fastapi[standard]>=0.121.2",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
