--- a/src/java-backend/email/src/main/resources/application.properties
+++ b/src/java-backend/email/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=email
+server.port=8090
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=fasteventmanager.fem@gmail.com
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=fasteventmanager.fem@gmail.com
