routes missing / added

--- a/src/python-backend/Attendance/app/db/.env
+++ b/src/python-backend/Attendance/app/db/.env
@@ -1,2 +1,2 @@
 #include sqlite+aiosqlite:/ into the route
-DATABASE_URL = YOUR_DATABASE_URL
+DATABASE_URL = "sqlite+aiosqlite:///./app/db/attendance.db"
