--- a/src/docker/kafka/docker-compose.yml
+++ b/src/docker/kafka/docker-compose.yml
@@ -1,35 +1,19 @@
 services:
   kafka:
     image: apache/kafka:3.7.0
-    container_name: kafka
+    container_name: fem_kafka
     ports:
-      - "9092:9092"
-      - "9093:9093"
-    environment:
-      KAFKA_NODE_ID: 1
-      KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-      KAFKA_LOG_DIRS: /tmp/kraft-combined-logs
-    volumes:
-      - kafka_data:/tmp/kraft-combined-logs
+      - "9092:9092"   # external access
+      - "9093:9093"   # controller port
 
-  # Topic initializer
-  init-topics:
-    image: apache/kafka:3.7.0
-    depends_on:
-      - kafka
-    entrypoint: ["/bin/sh", "-c"]
-    command: >
-      "
-      echo 'Waiting for Kafka...';
-      sleep 5;
-      /opt/kafka/bin/kafka-topics.sh --create --if-not-exists --topic email.send --bootstrap-server kafka:9092;
-      echo 'Topic email.send created.';
-      "
+    volumes:
+      - kafka_data:/var/lib/kafka/data
+
+    healthcheck:
+      test: ["CMD", "/opt/kafka/bin/kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9092"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
 volumes:
   kafka_data:
