--- a/src/python-backend/Attendance/pyproject.toml
+++ b/src/python-backend/Attendance/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.121.2",
+    "kafka-python>=2.2.15",
+    "requests>=2.32.5",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
 ]
