--- a/src/java-backend/authentication/src/main/resources/application.properties
+++ b/src/java-backend/authentication/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=authentication
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
+
+spring.datasource.url=jdbc:mysql://localhost:3307/authdb
+spring.datasource.username=root
+spring.datasource.password=root
+
+jwt.secret=mysupersecretkey123
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example.auth=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
