chore: minor changes

--- a/src/java-backend/authentication/src/main/resources/application.properties
+++ b/src/java-backend/authentication/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 jwt.secret=mysupersecretkey123
+jwt.expirySeconds=20000
+
 logging.level.org.springframework.security=DEBUG
 logging.level.com.example.auth=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
+
+
