[Update] APIGateWay URLs and Front API Try

--- a/src/python-backend/api_gateway/api_gateway.env
+++ b/src/python-backend/api_gateway/api_gateway.env
@@ -1,3 +1,5 @@
 ATTENDANCE_SVC_URL=http://localhost:8000
-EVENT_SVC_URL=http://localhost:8001
-LOGIN_SVC_URL=http://localhost:8002
+EVENT_SVC_URL=http://localhost:8020
+LOGIN_SVC_URL=http://localhost:8070
+EMAIL_SVC_URL=http://localhost:8090
+FRONT_URL=http://localhost:8050
